# lbrnt

./: .gitignore  CMakeLists.txt  RULES.md  TODO  argparser.h  common.h  context.h  deploy.sh  game.cpp  game.h  game.hpp  generator.cpp  generator.hpp  items.hpp  main.cpp  map.cpp  map.hpp  maze.h  message.hpp  player.h  random.h  rng.hpp  state.cpp  state.hpp  state.txt  svg_helper.h  viz.cpp  viz.hpp
.github/workflows/: ci.yml
frontend/: README.md  package-lock.json  package.json  scenario-dev-server.js  server.js
frontend/lib/: engineItems.js  gameConstants.js  messageParse.js  repoPaths.js  roomFiles.js  runLab.js  sandboxConstants.js  sandboxHttpApi.js  scenarioHttpApi.js  scenarioReplay.js  stateParse.js
frontend/public/: dev-sandbox.html  dev-sandbox.js  game.html  game.js  lobby.html
items/: Armor.cpp  Armor.hpp  Flashlight.cpp  Flashlight.hpp  Item.cpp  Item.hpp  Knife.cpp  Knife.hpp  LootTreasure.cpp  LootTreasure.hpp  Rifle.cpp  Rifle.hpp  Shotgun.cpp  Shotgun.hpp
locations/: Arsenal.cpp  Arsenal.hpp  Exit.cpp  Exit.hpp  Hospital.cpp  Hospital.hpp  Location.cpp  Location.hpp  LocationUtils.cpp  LocationUtils.hpp  Treasure.cpp  Treasure.hpp  arsenal.h  base.h  default_shapes.h  hospital.h  registry.h
scripts/: prepare.sh  run_webui.sh  state.txt  webui.py
scripts/static/: index.html
tests/: README.md  conftest.py  scenario_lib.py  test_scenarios.py
tests/scenarios/basic/breathe/: scenario.json
tests/scenarios/basic/enter-leave-arsenal-msg/: scenario.json
tests/scenarios/basic/enter-leave-hospital-msg/: scenario.json
tests/scenarios/basic/exit-msg-no-treasure/: scenario.json
tests/scenarios/basic/exit-msg-with-treasure/: scenario.json
tests/scenarios/basic/hit-outer-wall-msg/: scenario.json
tests/scenarios/basic/hit-wall-msg/: scenario.json
tests/scenarios/basic/no-breathe-on-same-cell/: scenario.json
tests/scenarios/basic/no-breathe-through-the-wall/: scenario.json
tests/scenarios/basic/players-turns-are-limited/: scenario.json
tests/scenarios/basic/turn-ends-on-wall-hit/: scenario.json
